--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 </head>
 <body>
+    {% include 'inc/navbar.html' %}
     <div class="jumbotron">
+        {% include 'inc/messages.html' %}
     {% block content %} {% endblock %}
         </div>
 </body>
