feat(): add display username

--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h3>Blog</h3>
+    <h3>Blog {{ current_user.username }}</h3>
 
 {% endblock content %}
