--- a/blog/templates/inc/navbar.html
+++ b/blog/templates/inc/navbar.html
@@ -2,7 +2,11 @@
   <a class="navbar-brand" href="#">Blog</a>
     <div class="navbar-nav">
       <a class="nav-link active" href="{{url_for ('home') }}">Home </a>
+      {% if current_user.is_authenticated %}
+            <a class="nav-link active" href="{{url_for ('logout') }}">Logout </a>
+      {% else %}
       <a class="nav-link active" href="{{url_for ('register') }}">Register </a>
       <a class="nav-link active" href="{{url_for ('login') }}">Login </a>
+      {% endif %}
     </div>
 </nav>
