--- a/blog/templates/inc/form_errors.html
+++ b/blog/templates/inc/form_errors.html
@@ -1,4 +1,4 @@
-{% if form.username.errors %}
+{% if form.username and form.username.errors %}
     {% for error in form.username.errors %}
         <p class="alert alert-danger">{{ error }}</p>
     {% endfor %}
@@ -16,7 +16,7 @@
     {% endfor %}
 {% endif %}
 
-{% if form.confirm_password.errors %}
+{% if form.confirm_password and form.confirm_password.errors %}
     {% for error in form.confirm_password.errors %}
         <p class="alert alert-danger">{{ error }}</p>
     {% endfor %}
