--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -2,12 +2,15 @@
 
 
 {% block content %}
-    <form action="" method="get">
+{% include 'inc/form_errors.html' %}
+<h2 style="text-align: justify; color: blue;">Login</h2>
+<br>
+    <form action="" method="post">
     {{ form.csrf_token }}
     {% if form.csrf_token.errors %}
     <div class="warning">You have submitted an invalid CSRF token</div>
     {% endif %}
-    <div>{{ form.email.label(class='form-control-label') }} {{form.username(class='form-control')}}</div>
+    <div>{{ form.email.label(class='form-control-label') }} {{form.email(class='form-control')}}</div>
     <div>{{ form.password.label(class='form-control-label')  }} {{form.password(class='form-control')}}</div>
         <br>
         <input type="submit" value="Register" class="btn btn-info">
