feat(): add remember

--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -12,6 +12,7 @@
     {% endif %}
     <div>{{ form.email.label(class='form-control-label') }} {{form.email(class='form-control')}}</div>
     <div>{{ form.password.label(class='form-control-label')  }} {{form.password(class='form-control')}}</div>
+    <div>{{ form.remember.label(class='form-control-label')  }} {{form.remember(class='form-control')}}</div>
         <br>
         <input type="submit" value="Register" class="btn btn-info">
     </form>
