--- a/blog/templates/inc/form_errors.html
+++ b/blog/templates/inc/form_errors.html
@@ -4,7 +4,7 @@
     {% endfor %}
 {% endif %}
 
-{% if form.email.errors %}
+{% if form.email and form.email.errors %}
     {% for error in form.email.errors %}
         <p class="alert alert-danger">{{ error }}</p>
     {% endfor %}
@@ -18,6 +18,12 @@
 
 {% if form.confirm_password and form.confirm_password.errors %}
     {% for error in form.confirm_password.errors %}
+        <p class="alert alert-danger">{{ error }}</p>
+    {% endfor %}
+{% endif %}
+
+{% if form.title and form.title.errors %}
+    {% for error in form.title.errors %}
         <p class="alert alert-danger">{{ error }}</p>
     {% endfor %}
 {% endif %}
