--- a/blog/templates/profile.html
+++ b/blog/templates/profile.html
@@ -2,9 +2,9 @@
 
 
 {% block content %}
+   <a href="{{url_for('new_post')}}" class="btn btn-success mb-3"> New Post </a>
   <h3>{{ current_user.username}}</h3>
   <p>{{ current_user.email}}</p>
-
 {% include 'inc/form_errors.html' %}
 <h2 style="text-align: justify; color: blue;">Update Username or Email</h2>
 <br>
