--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h3>Blog {{ current_user.username }}</h3>
+    <h3 class="mb-3">Blog {{ current_user.username }}</h3>
+    <di class="card">
+        {% for post in posts %}
+            <a class="card-body" href="{{ url_for('detail_post', post_id=post.id) }}">{{ post.title}}</a>
+        {% endfor %}
+    </di>
 
 {% endblock content %}
