--- a/blog/templates/detail_post.html
+++ b/blog/templates/detail_post.html
@@ -3,6 +3,7 @@
 {% block content %}
   {% if post.auther == current_user %}
     <a href="{{ url_for('delete', post_id=post.id) }}" class="btn btn-danger mb-3"> Delete </a>
+    <a href="{{ url_for('update', post_id=post.id) }}" class="btn btn-secondary mb-3"> Update </a>
   {% endif %}
   <h3 class="mb=3"> {{post.title}}</h3>
   <p>{{ post.created_at.strftime("%y:%m:%s")}} </p>
